<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_selecao"
        android:textStyle="bold"
        android:textColor="@color/black"></TextView>

    <Switch
        android:id="@+id/Switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchSenha"
        android:textOn="@string/ligado"
        android:textOff="@string/desligado"
        android:checked="true"/>

    <TextView
        android:id="@+id/textBotaoSelecao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_selecao"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desligado"
        android:textOn="@string/ligado"
        android:textOff="@string/desligado"/>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="23dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quao_feliz"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="23dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escala"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/black" />

    <SeekBar
        android:id="@+id/barraProgresso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:min="0"
        android:progress="5"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="recuperarDados"
        android:text="@string/recuperar_progresso" />

    <TextView
        android:id="@+id/textResult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="23dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:onClick="recuperarDados"/>


</LinearLayout>